--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,13 @@ a:hover {
   color: #535bf2;
 }
 
+/* Highlight the active link */
+.active {
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+
 body {
   margin: 0;
   display: flex;
