--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,30 @@
   text-align: center;
 }
 
+.projectpageWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+  text-align: center;
+}
+
+
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+  text-align: center;
+}
+
+.projectImageClass {
+  height: 250px;
+  width: 250px;
+}
+
 .logos {
 
   padding: 20px;
